Bug fix - remove line on small viewport sizes

--- a/css/app.css
+++ b/css/app.css
@@ -208,6 +208,10 @@ button.primary {
 .title {
     margin: 50px 0;
 }
+
+
+
+
 .fancy {
     line-height: 1;
     text-align: center;
@@ -234,6 +238,18 @@ button.primary {
 .fancy span:after {
     left: 100%;
     margin-left: 55px;
+}
+
+@media screen and ( max-width: 725px ) {
+    .fancy span:before,
+    .fancy span:after {
+        content: "";
+        position: absolute;
+        display: block;
+        height: 1px;
+        top: 24px;
+        width: 0;
+    }
 }
 
 .selected-page {
